<resources>
    <string name="app_name">Bodima</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Bodima</string>
    <string name="moto">Start Your Finding with Us</string>
    <string name="advertisement">Create Advertisements</string>

    <string-array name="houseCategory">
        <item>Select Category</item>
        <item>Annex</item>
        <item>Single-Room</item>
        <item>Home</item>
    </string-array>

    <string-array name="all">
        <item>All</item>
        <item>Annex</item>
        <item>Single-Room</item>
        <item>Home</item>
    </string-array>

    <string-array name="time">
        <item></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="meridium">
        <item></item>
        <item>A.M</item>
        <item>P.M</item>
    </string-array>

    <string-array name="furnitureCategory">
        <item>Select Category</item>
        <item>Used</item>
        <item>Brand-new</item>
        <item>Reconditioned</item>
    </string-array>

    <string-array name="f_all">
        <item>All</item>
        <item>Used</item>
        <item>Brand-new</item>
        <item>Reconditioned</item>
    </string-array>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="list">MY LIST</string>
    <string name="listmoto">Edit with One Click</string>
    <string name="Rstag">Rs :</string>
    <string name="price">Price</string>
    <string name="Location">Location</string>
    <string name="Title">Title</string>
    <string name="edittopichome">Edit Place Details</string>
    <string name="caltopic">Budget  Calculator</string>
    <string name="homeCate">Select a Category</string>
    <string name="Annexcard">Annexes</string>
    <string name="roomCard">Single-Room</string>
    <string name="HomeCard">Homes</string>
    <string name="Locationhint">Location</string>
    <string name="bedhint">No of Bed Rooms</string>
    <string name="bathHint">No of Bathrooms</string>
    <string name="addresshint">Address</string>
    <string name="Titlehint">Title</string>
    <string name="PriceHint">Price</string>
    <string name="mobilehint">Mobile</string>
    <string name="DescriptionHint">Description</string>
    <string name="postbuttontext">POST</string>
    <string name="newplaceadd">Add a New Place</string>
    <string name="totalexpence">Total Expenses</string>
    <string name="NetIncome">Net Income</string>
    <string name="Accomondationfee">Accomondation Fee</string>
    <string name="elebill">Electricity Bill Amount</string>
    <string name="waterbill">Water Bill Amount</string>
    <string name="days">No of Days</string>
    <string name="FoodExpe">Food Expences Per Day</string>
    <string name="trancost">Transpoart Cost per Day</string>
    <string name="otherexp">Other Expences</string>
    <string name="MonthlyIncome">Monthly income</string>
    <string name="Calculatebtntext">Calculate</string>


    <string-array name="category">
        <item></item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snacks and juices</item>
    </string-array>

    <string-array name="type">
        <item></item>
        <item>Veg</item>
        <item>Non-Veg</item>
    </string-array>
    <string-array name="searchtype">
        <item>All</item>
        <item>Veg</item>
        <item>Non-Veg</item>
    </string-array>

    <string-array name="allcategory">
        <item>All</item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snacks and juices</item>
    </string-array>

    <string-array name="groceryCategory">
        <item>Select Category</item>
        <item>Beverages</item>
        <item>Dairy</item>
        <item>Bread</item>
    </string-array>

    <string-array name="allGrocery">
        <item>All</item>
        <item>Beverages</item>
        <item>Dairy</item>
        <item>Bread</item>
    </string-array>


</resources>